--- a/test.ipynb
+++ b/test.ipynb
@@ -15,16 +15,18 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "'Connected: postgres@sparkifydb'"
+      "text/plain": [
+       "'Connected: postgres@sparkifydb'"
+      ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 2
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql postgresql://postgres:sql67905355@127.0.0.1/sparkifydb"
+    "%sql postgresql://postgres:password@127.0.0.1/sparkifydb"
    ]
   },
   {
@@ -33,18 +35,96 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "* postgresql://postgres:***@127.0.0.1/sparkifydb\n5 rows affected.\n"
+     "output_type": "stream",
+     "text": [
+      "* postgresql://postgres:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n"
+     ]
     },
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[(1, 1541106106796, 8, 'free', None, None, 139, 'Phoenix-Mesa-Scottsdale, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36\"'),\n (2, 1541106352796, 8, 'free', None, None, 139, 'Phoenix-Mesa-Scottsdale, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36\"'),\n (3, 1541106496796, 8, 'free', None, None, 139, 'Phoenix-Mesa-Scottsdale, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36\"'),\n (4, 1541106673796, 8, 'free', None, None, 139, 'Phoenix-Mesa-Scottsdale, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36\"'),\n (5, 1541107053796, 8, 'free', None, None, 139, 'Phoenix-Mesa-Scottsdale, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36\"')]",
-      "text/html": "<table>\n    <tr>\n        <th>songplay_id</th>\n        <th>start_time</th>\n        <th>user_id</th>\n        <th>level</th>\n        <th>song_id</th>\n        <th>artist_id</th>\n        <th>session_id</th>\n        <th>location</th>\n        <th>user_agent</th>\n    </tr>\n    <tr>\n        <td>1</td>\n        <td>1541106106796</td>\n        <td>8</td>\n        <td>free</td>\n        <td>None</td>\n        <td>None</td>\n        <td>139</td>\n        <td>Phoenix-Mesa-Scottsdale, AZ</td>\n        <td>&quot;Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36&quot;</td>\n    </tr>\n    <tr>\n        <td>2</td>\n        <td>1541106352796</td>\n        <td>8</td>\n        <td>free</td>\n        <td>None</td>\n        <td>None</td>\n        <td>139</td>\n        <td>Phoenix-Mesa-Scottsdale, AZ</td>\n        <td>&quot;Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36&quot;</td>\n    </tr>\n    <tr>\n        <td>3</td>\n        <td>1541106496796</td>\n        <td>8</td>\n        <td>free</td>\n        <td>None</td>\n        <td>None</td>\n        <td>139</td>\n        <td>Phoenix-Mesa-Scottsdale, AZ</td>\n        <td>&quot;Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36&quot;</td>\n    </tr>\n    <tr>\n        <td>4</td>\n        <td>1541106673796</td>\n        <td>8</td>\n        <td>free</td>\n        <td>None</td>\n        <td>None</td>\n        <td>139</td>\n        <td>Phoenix-Mesa-Scottsdale, AZ</td>\n        <td>&quot;Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36&quot;</td>\n    </tr>\n    <tr>\n        <td>5</td>\n        <td>1541107053796</td>\n        <td>8</td>\n        <td>free</td>\n        <td>None</td>\n        <td>None</td>\n        <td>139</td>\n        <td>Phoenix-Mesa-Scottsdale, AZ</td>\n        <td>&quot;Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36&quot;</td>\n    </tr>\n</table>"
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>songplay_id</th>\n",
+       "        <th>start_time</th>\n",
+       "        <th>user_id</th>\n",
+       "        <th>level</th>\n",
+       "        <th>song_id</th>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>session_id</th>\n",
+       "        <th>location</th>\n",
+       "        <th>user_agent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>1541106106796</td>\n",
+       "        <td>8</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>139</td>\n",
+       "        <td>Phoenix-Mesa-Scottsdale, AZ</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>1541106352796</td>\n",
+       "        <td>8</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>139</td>\n",
+       "        <td>Phoenix-Mesa-Scottsdale, AZ</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>1541106496796</td>\n",
+       "        <td>8</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>139</td>\n",
+       "        <td>Phoenix-Mesa-Scottsdale, AZ</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>1541106673796</td>\n",
+       "        <td>8</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>139</td>\n",
+       "        <td>Phoenix-Mesa-Scottsdale, AZ</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>5</td>\n",
+       "        <td>1541107053796</td>\n",
+       "        <td>8</td>\n",
+       "        <td>free</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>139</td>\n",
+       "        <td>Phoenix-Mesa-Scottsdale, AZ</td>\n",
+       "        <td>&quot;Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36&quot;</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 1541106106796, 8, 'free', None, None, 139, 'Phoenix-Mesa-Scottsdale, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36\"'),\n",
+       " (2, 1541106352796, 8, 'free', None, None, 139, 'Phoenix-Mesa-Scottsdale, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36\"'),\n",
+       " (3, 1541106496796, 8, 'free', None, None, 139, 'Phoenix-Mesa-Scottsdale, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36\"'),\n",
+       " (4, 1541106673796, 8, 'free', None, None, 139, 'Phoenix-Mesa-Scottsdale, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36\"'),\n",
+       " (5, 1541107053796, 8, 'free', None, None, 139, 'Phoenix-Mesa-Scottsdale, AZ', '\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/35.0.1916.153 Safari/537.36\"')]"
+      ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -84,18 +164,84 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "* postgresql://postgres:***@127.0.0.1/sparkifydb\n5 rows affected.\n"
+     "output_type": "stream",
+     "text": [
+      "* postgresql://postgres:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n"
+     ]
     },
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[(1541106106796, 22, 1, 44, 11, 2018, 3),\n (1541106352796, 22, 1, 44, 11, 2018, 3),\n (1541106496796, 22, 1, 44, 11, 2018, 3),\n (1541106673796, 22, 1, 44, 11, 2018, 3),\n (1541107053796, 22, 1, 44, 11, 2018, 3)]",
-      "text/html": "<table>\n    <tr>\n        <th>start_time</th>\n        <th>hour</th>\n        <th>day</th>\n        <th>week_of_year</th>\n        <th>month</th>\n        <th>year</th>\n        <th>weekday</th>\n    </tr>\n    <tr>\n        <td>1541106106796</td>\n        <td>22</td>\n        <td>1</td>\n        <td>44</td>\n        <td>11</td>\n        <td>2018</td>\n        <td>3</td>\n    </tr>\n    <tr>\n        <td>1541106352796</td>\n        <td>22</td>\n        <td>1</td>\n        <td>44</td>\n        <td>11</td>\n        <td>2018</td>\n        <td>3</td>\n    </tr>\n    <tr>\n        <td>1541106496796</td>\n        <td>22</td>\n        <td>1</td>\n        <td>44</td>\n        <td>11</td>\n        <td>2018</td>\n        <td>3</td>\n    </tr>\n    <tr>\n        <td>1541106673796</td>\n        <td>22</td>\n        <td>1</td>\n        <td>44</td>\n        <td>11</td>\n        <td>2018</td>\n        <td>3</td>\n    </tr>\n    <tr>\n        <td>1541107053796</td>\n        <td>22</td>\n        <td>1</td>\n        <td>44</td>\n        <td>11</td>\n        <td>2018</td>\n        <td>3</td>\n    </tr>\n</table>"
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>start_time</th>\n",
+       "        <th>hour</th>\n",
+       "        <th>day</th>\n",
+       "        <th>week_of_year</th>\n",
+       "        <th>month</th>\n",
+       "        <th>year</th>\n",
+       "        <th>weekday</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1541106106796</td>\n",
+       "        <td>22</td>\n",
+       "        <td>1</td>\n",
+       "        <td>44</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1541106352796</td>\n",
+       "        <td>22</td>\n",
+       "        <td>1</td>\n",
+       "        <td>44</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1541106496796</td>\n",
+       "        <td>22</td>\n",
+       "        <td>1</td>\n",
+       "        <td>44</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1541106673796</td>\n",
+       "        <td>22</td>\n",
+       "        <td>1</td>\n",
+       "        <td>44</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1541107053796</td>\n",
+       "        <td>22</td>\n",
+       "        <td>1</td>\n",
+       "        <td>44</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1541106106796, 22, 1, 44, 11, 2018, 3),\n",
+       " (1541106352796, 22, 1, 44, 11, 2018, 3),\n",
+       " (1541106496796, 22, 1, 44, 11, 2018, 3),\n",
+       " (1541106673796, 22, 1, 44, 11, 2018, 3),\n",
+       " (1541107053796, 22, 1, 44, 11, 2018, 3)]"
+      ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -108,9 +254,7 @@
    "source": [
     "## REMEMBER: Restart this notebook to close connection to `sparkifydb`\n",
     "Each time you run the cells above, remember to restart this notebook to close the connection to your database. Otherwise, you won't be able to run your code in `create_tables.py`, `etl.py`, or `etl.ipynb` files since you can't make multiple connections to the same database (in this case, sparkifydb)."
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
